hphp/test/quick/debug_backtrace_trait.php.expectf
varray(3) {
  darray(4) {
    ["file"]=>
    string(%d) "%s/debug_backtrace_trait_helper.inc"
    ["line"]=>
    int(15)
    ["function"]=>
    string(15) "print_backtrace"
    ["args"]=>
    varray(0) {
    }
  }
  darray(7) {
    ["file"]=>
    string(%d) "%s/debug_backtrace_trait.php"
    ["line"]=>
    int(6)
    ["function"]=>
    string(3) "bar"
    ["class"]=>
    string(1) "C"
    ["object"]=>
    object(C) (0) {
    }
    ["type"]=>
    string(2) "->"
    ["args"]=>
    varray(1) {
      object(stdClass) (0) {
      }
    }
  }
  darray(2) {
    ["function"]=>
    string(32) "entrypoint_debug_backtrace_trait"
    ["args"]=>
    varray(0) {
    }
  }
}

Catchable fatal error: Argument 1 passed to C::bar() must be an instance of stdClass, int given in %s/debug_backtrace_trait.php on line 7
